fix: input icons overlapping

--- a/css/bulma.css
+++ b/css/bulma.css
@@ -4573,6 +4573,22 @@ fieldset[disabled] .select select:hover {
   right: 0;
 }
 
+.control.is-loading.has-icons-right > .icon.is-right > i {
+  visibility: hidden;
+}
+
+.control.is-loading.is-small {
+  font-size: 0.75rem;
+}
+
+.control.is-loading.is-medium {
+  font-size: 1.25rem;
+}
+
+.control.is-loading.is-large {
+  font-size: 1.5rem;
+}
+
 .control.is-loading::after {
   position: absolute !important;
   right: 0.625em;
