--- a/sass/form/tools.sass
+++ b/sass/form/tools.sass
@@ -201,6 +201,16 @@ $label-colors: $form-colors !default
     .icon.is-right
       right: 0
   &.is-loading
+    &.has-icons-right
+      & > .icon.is-right
+        & > i
+          visibility: hidden
+    &.is-small
+      font-size: $size-small
+    &.is-medium
+      font-size: $size-medium
+    &.is-large
+      font-size: $size-large
     &::after
       @extend %loader
       position: absolute !important
